sql-server.statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sql-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sql-server
  serviceName: sql-server
  template:
    metadata:
      labels:
        app: sql-server
    spec:
      securityContext:
        runAsUser: 0
      containers:
      - name: sql-server
        image: mcr.microsoft.com/mssql/server:2019-latest
        ports:
        - containerPort: 1433
        volumeMounts:
        - name: sql-data
          mountPath: /var/opt/mssql/data
        # resources:
        #   requests:
        #     memory: "128Mi"
        #     cpu: "100m"
        #   limits:
        #     memory: "256Mi"
        #     cpu: "500m"
  volumeClaimTemplates:
  - metadata:
      name: sql-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
