sql-server.service.yml
apiVersion: v1
kind: Service
metadata:
  name: sql-server
spec:
  selector:
    app: sql-server
  ports:
    - protocol: TCP
      port: 1433
  type: ClusterIP
