techchallenge.api.service.yml
apiVersion: v1
kind: Service
metadata:
  name: techchallenge-api-service
spec:
  selector:
    app.kubernetes.io/name: techchallenge-api
  ports:
    - name: techchallenge-api-port
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 31116
  type: NodePort
