techchallenge-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: techchallenge-ingress
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: techchallenge-api-service
            port:
              number: 8080
